// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component tests Radio not direct child of radio group 1`] = `
<View
  accessibilityLabel="Uncontrolled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Uncontrolled RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
        }
      }
    >
      <View>
        <View
          accessibilityActions={
            Array [
              Object {
                "name": "Select",
              },
            ]
          }
          accessibilityLabel="Radio1"
          accessibilityPositionInSet={1}
          accessibilityRole="radio"
          accessibilitySetSize={2}
          accessibilityState={
            Object {
              "disabled": false,
              "selected": false,
            }
          }
          accessible={true}
          collapsable={false}
          enableFocusRing={true}
          focusable={true}
          labelPosition="after"
          onAccessibilityAction={[Function]}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "display": "flex",
              "flexDirection": "row",
              "marginRight": 12,
              "marginTop": 0,
              "minHeight": 20,
            }
          }
          value="key1"
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#616161",
                "borderRadius": 10,
                "borderStyle": "solid",
                "borderWidth": 1.5,
                "height": 20,
                "left": 0,
                "marginBottom": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginTop": 8,
                "top": 0,
                "width": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": undefined,
                  "borderRadius": 5,
                  "height": 10,
                  "left": 4,
                  "opacity": 0,
                  "top": 4,
                  "width": 10,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "center",
                "flexDirection": "column",
                "marginLeft": 0,
                "marginRight": 4,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Object {
                  "color": "#616161",
                  "fontFamily": "System",
                  "fontSize": 17,
                  "fontWeight": "400",
                  "margin": 0,
                  "marginTop": 0,
                }
              }
            >
              Radio1
            </Text>
          </View>
        </View>
        <View
          accessibilityActions={
            Array [
              Object {
                "name": "Select",
              },
            ]
          }
          accessibilityLabel="Radio2"
          accessibilityPositionInSet={2}
          accessibilityRole="radio"
          accessibilitySetSize={2}
          accessibilityState={
            Object {
              "disabled": false,
              "selected": true,
            }
          }
          accessible={true}
          collapsable={false}
          enableFocusRing={true}
          focusable={true}
          labelPosition="after"
          onAccessibilityAction={[Function]}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "display": "flex",
              "flexDirection": "row",
              "marginRight": 12,
              "marginTop": 0,
              "minHeight": 20,
            }
          }
          value="key2"
        >
          <View
            style={
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#0078d4",
                "borderRadius": 10,
                "borderStyle": "solid",
                "borderWidth": 1.5,
                "height": 20,
                "left": 0,
                "marginBottom": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginTop": 8,
                "top": 0,
                "width": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#0078d4",
                  "borderRadius": 5,
                  "height": 10,
                  "left": 4,
                  "opacity": 1,
                  "top": 4,
                  "width": 10,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "alignSelf": "center",
                "flexDirection": "column",
                "marginLeft": 0,
                "marginRight": 4,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Object {
                  "color": "#616161",
                  "fontFamily": "System",
                  "fontSize": 17,
                  "fontWeight": "400",
                  "margin": 0,
                  "marginTop": 0,
                }
              }
            >
              Radio2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;

exports[`RadioGroup component tests RadioGroup default 1`] = `
<View
  accessibilityLabel="Uncontrolled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Uncontrolled RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="RadioButton1"
        accessibilityPositionInSet={1}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": false,
          }
        }
        accessible={true}
        collapsable={false}
        enableFocusRing={true}
        focusable={true}
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 2,
            "display": "flex",
            "flexDirection": "row",
            "marginRight": 12,
            "marginTop": 0,
            "minHeight": 20,
          }
        }
        value="key1"
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#616161",
              "borderRadius": 10,
              "borderStyle": "solid",
              "borderWidth": 1.5,
              "height": 20,
              "left": 0,
              "marginBottom": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginTop": 8,
              "top": 0,
              "width": 20,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 5,
                "height": 10,
                "left": 4,
                "opacity": 0,
                "top": 4,
                "width": 10,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "center",
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 4,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Object {
                "color": "#616161",
                "fontFamily": "System",
                "fontSize": 17,
                "fontWeight": "400",
                "margin": 0,
                "marginTop": 0,
              }
            }
          >
            RadioButton1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="RadioButton2"
        accessibilityPositionInSet={2}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": true,
          }
        }
        accessible={true}
        collapsable={false}
        enableFocusRing={true}
        focusable={true}
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 2,
            "display": "flex",
            "flexDirection": "row",
            "marginRight": 12,
            "marginTop": 0,
            "minHeight": 20,
          }
        }
        value="key2"
      >
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#0078d4",
              "borderRadius": 10,
              "borderStyle": "solid",
              "borderWidth": 1.5,
              "height": 20,
              "left": 0,
              "marginBottom": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginTop": 8,
              "top": 0,
              "width": 20,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#0078d4",
                "borderRadius": 5,
                "height": 10,
                "left": 4,
                "opacity": 1,
                "top": 4,
                "width": 10,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "center",
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 4,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Object {
                "color": "#616161",
                "fontFamily": "System",
                "fontSize": 17,
                "fontWeight": "400",
                "margin": 0,
                "marginTop": 0,
              }
            }
          >
            RadioButton2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;
